--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "description": "Android ProgressDialog for React Native",
   "main": "index.js",
+  "types": "index.d.ts",
   "files": [
     "README.md",
     "android",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "react": "^16.9.0",
-    "react-native": "^0.61.5"
+    "react-native": "^0.61.5",
+    "typescript": "^4.1.3"
   }
 }
