--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-popup-progress-bar",
   "title": "React Native Popup Progress Bar",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Android ProgressDialog for React Native",
   "main": "index.js",
   "types": "./types/index.d.ts",
@@ -11,7 +11,8 @@
     "index.js"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish": "tsc"
   },
   "repository": {
     "type": "git",
